style.css
/*-------------------
    RESET
-------------------*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*-------------------
    TYPOGRAPHY
-------------------*/
body {
    font-family: 'Open Sans', sans-serif;
    background-color: #fff;
}

/*-------------------
    GRID
-------------------*/
.row {
    display: flex;
    flex-wrap: wrap;
}
.column-10 {
    width: 10%;
}
.column-25 {
    width: 25%;
}
.column-33 {
    width: calc(100% / 3);
}
.column-35 {
    width: 35%;
}
.column-50 {
    width: 50%;
}
.column-65 {
    width: 65%;
}
/*-------------------
    UTILITIES
-------------------*/

.container-big {
    margin: 0 auto;
    max-width: 1200px;
}
.container-small {
    margin: 0 auto;
    max-width: 1000px;
}
.blue {
    background-color: #b4d0e7;
}
/*-------------------
    BUTTONS
-------------------*/
.btn {
    background-color: transparent;
    padding: 4px;
    border: none;
}
.btn-blue {
    background-color: #0061ff;
    color: #fff;
}
header .btn {
    height: 34px;
    width: 60px;
    margin: 20px;
}
/*-------------------
    HEADER
-------------------*/
header {
    position: sticky;
    height: 80px;
    top: 0;
    background-color: #fff;
    z-index: 1000;
}
header .row {
    justify-content: space-between;
}
header .column-50 {
    display: flex;
    align-items: center;
}
.header-nav ul {
    display: flex;
    list-style: none;
}
.header-nav li {
    padding: 0 20px;
}
.header-nav li a {
    text-decoration: none;
    color: #000;
}
 .column-50 img {
    padding-left: 24px;
    padding-right: 24px;
 }
 .right {
    justify-content: flex-end;
 }

 /*-------------------
    MAIN
-------------------*/
.hero h1 {
    font-size: 60px;
    padding-top: 100px;
}
.container-big .row {
    margin-top: 64px;
    position: relative;
    bottom: -60px;
}
.column-35 button, .column button{
    font-size: 16px;
    margin: 33px 0;
    padding: 14px;
}
.column-35 i {
    margin-top: 90px;
    font-size: 40px;
}
.column-65 img {
    width: 100%;
}
.businness-type {
    margin-top: 100px;
}
.container-small h2 {
    font-size: 40px;
}
.input {
    margin-top: 70px;
    margin-bottom: 50px;
}
label {
    margin-right: 40px;
}
.card {
    border: 1px solid #d0d0d3;
}
.column-header {
    display: flex;
    justify-content: center;
    width: 100%;
    border-bottom: 1px solid #d0d0d3;
    padding: 0 15px;
}
.column {
    padding: 0 15px;
}
.column-33 h4 {
    margin-top: 28px;
    margin-bottom: 28px;
    font-size: 22px;
}
.bold {
    font-weight: 800;
}
.column ul {
    list-style-position: inside;
    list-style-type: none;
}
.storage {
    content: "\f07b";
}
.column button {
   display: flex;
   justify-content: center;
   width: 100%;
}
.column li {
    margin-top: 20px;
}
.column hr {
    margin: 36px 0;
    width: 20%;
}
.fa-check {
    color: #0061ff;
}

